<resources>
    <string name="app_name" translatable="false">Maths101</string>
    <string name="title" translatable="false">Maths 101</string>
    <string name="playButton">Play</string>
    <string name="instructionsButton">Instructions</string>
    <string name="creditsButton">Credits</string>
    <string name="optionsButton">Options</string>
    <string name="beginnerButton">Beginner</string>
    <string name="intermediateButton">Intermediate</string>
    <string name="expertButton">Expert</string>
    <string name="backButton">Back</string>
    <string name="fractionsButton">Fractions</string>
    <string name="proportionalityButton">Proportionality</string>
    <string name="firstDegreeEquationButton">First Degree Equations</string>
    <string name="secondDegreeEquationButton">Second Degree Equations</string>
    <string name="arithmeticProgressionButton">Arithmetic Progression</string>
    <string name="greatestCommonDividerButton">Greatest Common Divider</string>
    <string name="logarithmicEquationButton">Simple Logarithmic Equations</string>
    <string name="powersOfIButton">Powers of I</string>
    <string name="geometricProgressionButton">Geometric Progression</string>
    <string name="lifeQuestionsButton">Real Life Situations</string>
    <string name="title_activity_beginner_life">BeginnerLifeActivity</string>
    <string name="question30Button">The Mysterious Urn</string>
    <string name="question30Prompt">An urn contains an even number of balls; half of the balls in the urn are white and the other half black. If three balls are drawn at the same time from the urn, the probability of drawing 3 balls of the same color is 20%. How many balls are there in the urn before any balls are drawn?</string>
    <string name="validateButton">Validate</string>
    <string name="correct">Correct!</string>
    <string name="emptyNumber">Please enter a number between -(2^32) and (2^32)-1</string>
    <string name="emptyNumberLong">Please enter a number between -(2^64) and (2^64)-1</string>
    <string name="hintNumber">Enter your answer here</string>
    <string name="instructions">Maths 101 is a game about showing different uses of maths in real life situations. Start playing by selecting a level and a subject you want to test your knowledge on. You can later prove your skills by applying your knowledge into real life situations by pressing the \"Real Life Situations\" under the level of your choice.\n\nNote: This game requires you to have at least studied some basics of the question you\'re answering as it doesn\'t go through basic methods. Please round your answers to the 2 decimal places. Scientific calculators are allowed</string>
    <string name="question31Button">Meet me halfway</string>
    <string name="question31Prompt">There are two ships some distance apart. The first ship can cover the distance between them in 5 days, while the second ship can cover the same distance in 7 days. If the two ships begin the journey towards each other at the same time, in how many days will they meet? </string>
    <string name="question32Button">The Gold Seller</string>
    <string name="question32Prompt">A  man  sells  two pieces  of gold, which  together weigh one  pound [=  12 ounces]. He  sells  the  first piece  of gold at the price of 68 bezants per pound, and he sells the second piece at 50 bezants per pound [a bezant is a valuable coin]. In total he receives 56 bezants. What is the weight [in ounces] of the first piece of gold?</string>
    <string name="question33Button">The Big Apple Basket</string>
    <string name="question33Prompt">A certain man entered a certain pleasure garden through 7 doors, and he took from there a number of apples; when he wished to leave he had to give the first doorkeeper half of all the apples and one more; to the second doorkeeper he gave half of the remaining apples and one more. He gave to the other 5 doorkeepers similarly, and there was one apple left for him. It is sought how many apples there were that he collected.</string>
    <string name="question34Button">Just keep shuffling</string>
    <string name="question34Prompt">Consider a deck of 63 cards, different from one another. Define a shuffle on the deck as follows: take the first 31 cards of the deck and place them one after the other in between each pair of the remaining 32 cards. After a shuffle, you obtain a new arrangement of the deck. How many times does the shuffle have to be repeated in order to return to the initial arrangement of the cards in the deck?</string>
    <string name="question35Button">Bird problem</string>
    <string name="question35Prompt">A man buys 30 birds for 30 denari. He is able to choose from partridges, pigeons, and sparrows [which are three types of birds; he chooses at least one bird for each type]. A partridge costs 3 denari, a pigeon costs 2 denari, and 2 sparrows cost 1 denaro (i.e. 1 sparrow costs ½ a denaro). How many sparrows did the man buy?</string>
    <string name="question36Button">A valuable heritage</string>
    <string name="question36Prompt">A Raja dies, leaving to his numerous daughters a certain number of pearls, requesting that they be shared out in the following way: the eldest would receive one pearl, and a seventh of those then remaining. The second daughter would then receive two pearls, and a seventh of those then remaining, the third would then receive three pearls, and again a seventh of those then remaining, and so on. The youngest  daughter ran to the  judge complaining  that this  complex  system  was hugely unfair. The judge who, as was tradition, was skilled in problem-solving, immediately replies that the girl was mistaken: the proposed division was correct, the pearls would be equally divided and each of the daughters would receive the same number of pearls. How many daughters did the Raja have?</string>
    <string name="question37Button">The Empty Vat</string>
    <string name="question37Prompt">There is a vat which has four different holes. The vat empties at a different rate depending on which hole is opened: through the first hole it takes 1 day; through the second it takes 2 days; through the third it takes 3 days; and through the fourth it takes 4 days. If all four holes are opened at the same time, how many hours will it take for the vat to empty?</string>
    <string name="question38Button">Fish merchant</string>
    <string name="question38Prompt">There were two men: the first had 12 fish, while the second had 13. The fish all were equally priced. From the first man the customs agent took away 1 fish and 12 denari. From the second man the customs agent took 2 fish, and gave the man back 7 denari. Find the price of each fish in denari.</string>
    <string name="contentDescriptionAnswer">This is the answer to that question, content description is currently work in progress</string>
    <string name="viewSolution">View Solution</string>
    <string name="gcdPrompt">Find the Greatest Common Divider (GCD) of these two numbers:</string>
    <string name="incorrectGCD">Incorrect! The answer was %d</string>
    <string name="fractionsPrompt">Multiply those 2 fractions</string>
    <string name="incorrectFractions">Incorrect! The answer was %d / %d</string>
    <string name="firstDegreePrompt">Find the value of a</string>
    <string name="firstDegreeLine">%d a + %d = %d a + %d</string>
    <string name="incorrectFirstDegree">Incorrect! The answer is  %1$,.2f</string>
    <string name="arithmeticProgressionPrompt">Find the %d th term to this arithmetic progression</string>
    <string name="arithmeticProgressionTerm">a1 = %d</string>
    <string name="arithmeticProgressionReason">r = %d</string>
    <string name="arithmeticProgressionIncorrect">Incorrect! The answer was %d</string>
    <string name="geometricProgressionPrompt">Find the %d th term to this geometric progression</string>
    <string name="geometricProgressionTerm">a1 = %d</string>
    <string name="geometricProgressionReason">r = %d</string>
    <string name="geometricProgressionIncorrect">Incorrect! The answer was %d</string>
    <string name="secondDegreePrompt">Find the value of a (if there is only 1 solution, put the same number twice)</string>
    <string name="secondDegreeLine">%d a² + %d a + %d = 0</string>
    <string name="secondDegree2Incorrect">Incorrect! The answers were  %1$,.2f and  %2$,.2f</string>
    <string name="secondDegree1Incorrect">Incorrect! The answer was  %1$,.2f</string>
    <string name="secondDegree0Incorrect">Incorrect! There were no solutions to this equation</string>
    <string name="secondDegree0Button">There are no solutions to this equation</string>
    <string name="logarithmicPrompt">Find the value of a</string>
    <string name="logarithmicLine">log₂ (%d a + %d ) = %d</string>
    <string name="logarithmicIncorrect">Incorrect! The answer was %1$,.2f</string>
    <string name="powersIPrompt">Evaluate this expression</string>
    <string name="powersILine">i^%d</string>
    <string name="powersIIncorrect">Incorrect! The answer was %s</string>
    <string name="emptyOption">Please select an answer</string>
    <string name="proportionalityPrompt">Complete this proportional table</string>
    <string name="proportionalityIncorrect">Incorrect! The answer was %1$,.2f</string>
    <string name="question20Button">Race to the fountain</string>
    <string name="question20Prompt">There are two towers: one is 60 meters tall and the other is 80 meters tall; between one tower and the other there is a distance of 100 meters. On the ground there is a water fountain, found between the bases of the two towers. It is known that two birds, leaving simultaneously from the tops of the two towers and flying with the same speed, will reach the fountain at the same moment. What is the distance between the fountain and the shortest tower?</string>
    <string name="question21Button">The odd marathon</string>
    <string name="question21Prompt">Two runners run for one hour at a constant speed on a 400 m track: the first runs at 10 km/h, the second at 7 km/h. The two runners start together at the same point. How many times do they cross each other (after the start) if they are running in opposite directions?</string>
    <string name="question22Button">No grades, no problems!</string>
    <string name="question22Prompt">Mme Elissar handed out maths exams to the 9 students and wrote down their average of 5. They forgot their paper and the next day, she gave the rest, which is 15 students their grades with an average of 3. What is the average of the class?</string>
    <string name="question23Button">Almost an eagle</string>
    <string name="question23Prompt">At hole number 4, the distance in a straight line between the hole and the starting point is 332 meters. At the first hit, Patrick\'s ball travel 182 meters at an angle of 15°. At the second hit, the ball travels directly to the hole but stops 12 meters before the hole. What distance (in meters) did the ball travel during the second hit?</string>
    <string name="question24Button">Home from school</string>
    <string name="question25Button">What a day at Blizzcon</string>
    <string name="question26Button">The triangular farm</string>
    <string name="question27Button">The Grand Opening</string>
    <string name="question28Button">The Car Dealer</string>
    <string name="question10Button">Tournament inscription</string>
    <string name="question11Button">Squirrel trouble</string>
    <string name="question12Button">Curiosity Killed the Cat</string>
    <string name="question13Button">One pie short</string>
    <string name="question14Button">At the grocery store</string>
    <string name="question15Button">A Kind Gift</string>
    <string name="question17Button">Quite the taxes</string>
    <string name="question18Button">At the grocer</string>
</resources>