<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/question30Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="70dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question30Button" />

            <Button
                android:id="@+id/question31Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question31Button" />

            <Button
                android:id="@+id/question32Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question32Button" />

            <Button
                android:id="@+id/question33Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question33Button" />

            <Button
                android:id="@+id/question34Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question34Button" />

            <Button
                android:id="@+id/question35Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question35Button" />

            <Button
                android:id="@+id/question36Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question36Button" />

            <Button
                android:id="@+id/question37Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question37Button" />

            <Button
                android:id="@+id/question38Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question38Button" />

            <Button
                android:id="@+id/backExpertLifeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/backButton" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>