<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/question20Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="70dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question20Button" />

            <Button
                android:id="@+id/question21Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question21Button" />

            <Button
                android:id="@+id/question22Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question22Button" />

            <Button
                android:id="@+id/question23Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question23Button" />

            <Button
                android:id="@+id/question24Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question24Button" />

            <Button
                android:id="@+id/question25Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question25Button" />

            <Button
                android:id="@+id/question26Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question26Button" />

            <Button
                android:id="@+id/question27Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question27Button" />

            <Button
                android:id="@+id/question28Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/question28Button" />

            <Button
                android:id="@+id/backIntermediateLifeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:onClick="welcomeButtonPressed"
                android:text="@string/backButton" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>