<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/fractionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="70dp"
            android:onClick="welcomeButtonPressed"
            android:text="@string/fractionsButton" />

        <Button
            android:id="@+id/proportionalityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:onClick="welcomeButtonPressed"
            android:text="@string/proportionalityButton" />

        <Button
        android:id="@+id/firstDegreeEquationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:onClick="welcomeButtonPressed"
        android:text="@string/firstDegreeEquationButton" />

        <Button
            android:id="@+id/beginnerLifeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:onClick="welcomeButtonPressed"
            android:text="@string/lifeQuestionsButton" />

        <Button
            android:id="@+id/backBeginnerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:onClick="welcomeButtonPressed"
            android:text="@string/backButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
